# mcp-rawr-graphiti

./: .cursorignore  .env.example  .git-mailmap  .gitignore  ARCHITECTURE_PROPOSAL_ENTITY_LOADING.md  CAPITULO_GENERACION_MUSICAL.md  CONFIGURATION.md  Dockerfile  GUIA_VISUALIZACION.md  README.md  README_test_integration.md  RESUMEN_PRUEBAS.md  base-compose.yaml  check_neo4j_data.py  check_prereqs.sh  complete_musical_system.py  configure_graphiti.sh  constants.py  create_musical_data.py  create_musical_nodes.py  create_sample_data.py  entrypoint.sh  graphiti-mcp-repo.md  graphiti_mcp_server.py  mcp-projects.yaml  musical_generator.py  ollama_embeddings_proxy.py  ollama_music_integration.py  pyproject.toml  repomix.config.json  run_test.sh  setup_visualizer.sh  start_graphiti_with_ollama.py  test_entity_registration.py  test_integration.py  test_integration_robust.py  test_ollama_simple.py  test_rules.md  web_visualizer.py
docs/: INSTALL.md  MCP_TOOLS_USAGE.md  entity-design-example.md  entity-design-guidelines.md  graphiti-core-principles.md
entities/: __init__.py  agent.py  artifact.py  bad_preference.py  bad_procedure.py  developer.py  documentation.py  entity_registry.py  feedback.py  goal.py  interaction_model.py  preference.py  preferences.py  procedure.py  procedures.py  project.py  requirement.py  requirements.py  resource.py  tool.py
entity_types/: __init__.py  entity_registry.py
graphiti_cli/: commands.py  compose_generator.py  core.py  main.py  project_registry.py  yaml_utils.py
rules/: graphiti-mcp-core-rules.md
tests/: README.md  conftest.py
(+106 files in other folders)
